--- a/security/src/main/resources/templates/loginForm.html
+++ b/security/src/main/resources/templates/loginForm.html
@@ -13,6 +13,7 @@
 	<input type="password" name="password" />
 	<button>로그인</button>
 </form>
+<a href="/joinForm"> 회원가입 하러가기 </a>
 
 </body>
 </html>
