--- a/security/src/main/resources/templates/loginForm.html
+++ b/security/src/main/resources/templates/loginForm.html
@@ -13,6 +13,9 @@
 	<input type="password" name="password" />
 	<button>로그인</button>
 </form>
+<br>
+<button onclick='location.href="/oauth2/authorization/google"'> 구글 로그인 하기 </button>
+<br>
 <a href="/joinForm"> 회원가입 하러가기 </a>
 
 </body>
