--- a/security/src/main/resources/templates/joinForm.html
+++ b/security/src/main/resources/templates/joinForm.html
@@ -11,9 +11,9 @@
 	<input type="text" name="username" placeholder="Username"/> <br/>
 	<input type="password" name="password" placeholder="Password"/> <br/>
 	<input type="email" name="email" placeholder="Email"/> <br/>
-	<input type="radio" name="roleType" value="user"> 유저
-	<input type="radio" name="roleType" value="manager"> 매니저
-	<input type="radio" name="roleType" value="admin"> 관리자
+	<input type="radio" name="roleType" value="ROLE_USER"> 유저
+	<input type="radio" name="roleType" value="ROLE_MANAGER"> 매니저
+	<input type="radio" name="roleType" value="ROLE_ADMIN"> 관리자
 	<button>회원가입</button>
 </form>
 </body>
