--- a/security/src/main/resources/templates/loginForm.html
+++ b/security/src/main/resources/templates/loginForm.html
@@ -15,6 +15,7 @@
 </form>
 <br>
 <button onclick='location.href="/oauth2/authorization/google"'> 구글 로그인 하기 </button>
+<button onclick='location.href="/oauth2/authorization/naver"'> 네이버 로그인 하기 </button>
 <br>
 <a href="/joinForm"> 회원가입 하러가기 </a>
 
